# llm-heuristics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  heudiconv_extract.slurm  pyproject.toml  setup_models.sh  subject_sessions.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
llm_heuristics/: __init__.py  _version.py  cli.py
llm_heuristics/core/: __init__.py  bids_mapper.py  heudiconv_extractor.py  heuristic_generator.py  sequences_grouper.py  series_grouper.py
llm_heuristics/models/: __init__.py  llama_model.py  llm_interface.py
llm_heuristics/utils/: __init__.py  bids_integration.py  config.py  logging.py  templates.py
test_cli_run/: grouping_report.txt
test_group_output/: grouping_report.txt  mapping_report.txt
test_phi3_output/: mapping_report.txt
tests/: __init__.py  test_bids_integration.py  test_dicom_analyzer.py  test_templates.py
